--- a/ProAcc/Views/Activity/_ActivityCreationIndex.cshtml
+++ b/ProAcc/Views/Activity/_ActivityCreationIndex.cshtml
@@ -83,6 +83,7 @@
                 $("#actcre_on").val(result.Cre_on);
                 $("#actcre_By").val(result.Cre_By);
                 $("#btntivityCreUpdate").show();
+                $("#btnAddNew").show();
                 $("#btnActivityCreCreate").hide();
 
             },
