--- a/ProAcc/Views/User/Index.cshtml
+++ b/ProAcc/Views/User/Index.cshtml
@@ -9,7 +9,7 @@
 <script src="~/Asset/Scripts/Datatable/jquery.dataTables.min.js"></script>
 <script src="~/Asset/Scripts/Datatable/dataTables.bootstrap4.min.js"></script>
 
-<a class="card-title">User Index</a>
+<a class="card-title">User List</a>
 <hr />
 <table class="table" id="tblUserTable">
     <thead>
@@ -24,7 +24,8 @@
                 @Html.DisplayNameFor(model => model.Cre_on)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.EMail)
+                Email
+                @*@Html.DisplayNameFor(model => model.EMail)*@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Phone)
