--- a/ProAcc/Views/Customers/Index.cshtml
+++ b/ProAcc/Views/Customers/Index.cshtml
@@ -9,7 +9,8 @@
 <link href="~/Asset/Scripts/Datatable/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
 <script src="~/Asset/Scripts/Datatable/jquery.dataTables.min.js"></script>
 <script src="~/Asset/Scripts/Datatable/dataTables.bootstrap4.min.js"></script>
-
+<a class="card-title">Customer List</a>
+<hr />
 <table class="table" id="tblCustomer">
     <thead>
         <tr>
@@ -24,27 +25,28 @@
     <tbody>
         @foreach (var item in Model)
         {
-        <tr>
-            <td>
-                <a class="txtG" value="@item.Company_Name">@item.Company_Name</a>
-            </td>
-            <td>
-                <a class="txtG" value="@item.Industry_Sector">@item.Industry_Sector</a>
-            </td>
-            <td>
-                <a class="txtG" value="@item.Phone">@item.Phone</a>
-            </td>
-            <td>
-                <a class="txtG" value="@item.Email">@item.Email</a>
-            </td>
-            <td>
-                <a class="txtG" value="@item.Cre_on">@item.Cre_on</a>
-            </td>
-            <td>
-                <a href="#" id="btnEdit" class="editCustomer fa fa-edit"></a><input type="hidden" value="@item.Customer_ID" /> |
-                <a href="#" class="btnDelete fa fa-trash"></a><input type="hidden" value="@item.Customer_ID" />
-            </td>
-        </tr>
+            <tr>
+                <td>
+                    <a class="txtG" value="@item.Company_Name">@item.Company_Name</a>
+                </td>
+                <td>
+                    <a class="txtG" value="@item.Industry_Sector">@item.Industry_Sector</a>
+                </td>
+                <td>
+                    <a class="txtG" value="@item.Phone">@item.Phone</a>
+                </td>
+                <td>
+                    <a class="txtG" value="@item.Email">@item.Email</a>
+                </td>
+                <td>
+                    <a class="txtG" value="@item.Cre_on">@item.Cre_on</a>
+                </td>
+                <td>
+                    <a class="fa fa-edit" data-toggle="tooltip" data-placement="top" title="Edit!" href="@Url.Action("GetCustomerById","Customers", new { id = item.Customer_ID })"></a> &nbsp;&nbsp;
+                    @*<a href="#" id="btnEdit" class="editCustomer fa fa-edit"></a><input type="hidden" value="@item.Customer_ID" /> |*@
+                    <a href="#" class="btnDelete fa fa-trash"></a><input type="hidden" value="@item.Customer_ID" />
+                </td>
+            </tr>
         }
     </tbody>
 </table>
@@ -66,14 +68,14 @@
     });
 
     $(".editCustomer").on("click", function () {
-        //debugger;
+        
         var id = $(this).next().val();
         $.ajax({
             url: '@Url.Action("GetCustomerById","Customers")',
             type: "GET",
             data: { id: id },
             success: function (result) {
-                debugger;
+                
                 $("#customerid").val(result.Customer_ID);
                 $("#txtCompanyName").val(result.Company_Name);
                 $("#txtIndustrySector").val(result.Industry_Sector);
@@ -103,8 +105,8 @@
                 success: function (response) {
                     if (response == "success") {
                         alert("Customer deleted successfully!");
-                        //location.reload();
-                        loadCustomer();
+                        location.reload();
+                        //loadCustomer();
                             $("#txtCompanyName").val("");
                             $("#txtIndustrySector").val("");
                             $("#txtCustomerPhone").val("");
