--- a/ProAcc/Views/User/Edit.cshtml
+++ b/ProAcc/Views/User/Edit.cshtml
@@ -14,7 +14,7 @@
 
         span {
             color: red;
-            font-size: 10px;
+            font-size: 14px;
         }
     </style>
 
@@ -23,6 +23,7 @@
     @Html.AntiForgeryToken()
 
     <a class="card-title">User Updation</a>
+    <hr/>
     <div style="padding:1em;" class="col-lg-12">
         <div class="row">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -32,7 +33,7 @@
                 @Html.HiddenFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.HiddenFor(model => model.Cre_on, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.HiddenFor(model => model.Cre_By, new { htmlAttributes = new { @class = "form-control" } })
-
+                
                 <div class="position-relative form-group">
                     @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-5 " })
                     <div class="col-md-10">
@@ -45,7 +46,7 @@
                 </div>
 
                 <div class="position-relative form-group">
-                    @Html.LabelFor(model => model.EMail, htmlAttributes: new { @class = "control-label col-md-5" })
+                    @Html.LabelFor(model => model.EMail,"Email", htmlAttributes: new { @class = "control-label col-md-5" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.EMail, new { htmlAttributes = new { @class = "form-control", @id="txtUserEmail" } })
                         @Html.ValidationMessageFor(model => model.EMail, "", new { @class = "text-danger" })
@@ -69,7 +70,7 @@
 
             <div class="col-6 ">
                 <div class="position-relative form-group">
-                    @Html.LabelFor(model => model.LoginId, htmlAttributes: new { @class = "control-label col-md-5" })
+                    @Html.LabelFor(model => model.LoginId,"Login Id", htmlAttributes: new { @class = "control-label col-md-5" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.LoginId, new { htmlAttributes = new { @class = "form-control",@id = "LoginUserID" } })
                         @Html.ValidationMessageFor(model => model.LoginId, "", new { @class = "text-danger" })
@@ -82,7 +83,7 @@
                 <div class="position-relative form-group">
                     @Html.Label("User Type", htmlAttributes: new { @class = "control-label col-md-5" })
                     <div class="col-md-10">
-                        @Html.DropDownList("UserTypeID", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownList("UserTypeID", null, htmlAttributes: new { @class = "form-control"})
                         @Html.ValidationMessageFor(model => model.UserTypeID, "", new { @class = "text-danger" })
                     </div> 
                     
@@ -106,17 +107,28 @@
 
             </div>
         </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Save" id="saveUser" class="btn btn-primary" />
                 </div>
+            </div>*@
+        </div>
+        <div class="row">
+        <div class="col-lg-12">
+
+            <div class="col-md-offset-2 col-md-12">
+                <input type="submit" value="Save" id="saveUser" class="btn btn-primary" />
+                <div class="col-lg-3" style="float:right;">
+                    @Html.ActionLink("Back to List", "Index")
+                </div>
             </div>
         </div>
+    </div>
         }
 
-        <div>
+        @*<div>
             @Html.ActionLink("Back to List", "Index")
-        </div>
+        </div>*@
 
 <script>
     $(document).ready(function () {
@@ -134,6 +146,12 @@
             $("#divRole").show();
             $("#divCust").show();
         }
+
+        $('#LoginUserID').attr("readonly", true); 
+        $('#UserTypeID').attr("readonly", true); 
+        $('#RoleID').attr("readonly", true); 
+        $('#Customer_Id').attr("readonly", true); 
+       
 
     $("#UserTypeID").change(function () {
         var Id = $(this).val();
@@ -163,7 +181,7 @@
          });
 
         $('#userMasterName').on('focusout', function () {
-            //debugger;
+            
             var userMasterName = $("#userMasterName").val().trim();
             var id = $("#UserId").val().trim();
             if (userMasterName == "") {
@@ -198,7 +216,7 @@
     });
 
     $('#LoginUserID').on('focusout', function () {
-        debugger;
+        
         var LoginName = $("#LoginUserID").val().trim();
          var id = $("#UserId").val().trim();
         if (LoginName == "") {
@@ -234,6 +252,7 @@
      $("#txtMobile").keypress(function (e) {
             //if the letter is not digit then display error and don't type anything
          if (e.which != 8 && e.which != 0 && (e.which < 48 || e.which > 57)) {
+              event.preventDefault();
              //display error message
              $("#lblMobile").html("Numbers Only").show();
              ValidateUser()
@@ -245,8 +264,23 @@
          ValidateUser()
      });
 
+    $("#txtMobile").blur(function () {
+            
+            phone = $(this).val();
+            phone = phone.replace(/[^0-9]/g,'');
+            if (phone.length != 10) {
+                $("#lblMobile").html("Phone number must be 10 digits").show().fadeOut(2000);
+                 ValidateUser();
+            }
+            else {
+                $("#lblMobile").html("").hide();
+                 ValidateUser();
+            }
+            ValidateUser();
+       });
+
     $("#txtUserEmail").on("blur", function (event) {
-            debugger;
+           
            var str = $(this).val();
            var filter = /^([\w-\.]+)@@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([\w-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$/;
 
@@ -262,7 +296,7 @@
     });   
 
     function ValidateUser() {
-        debugger;
+        
         var id = $("#UserId").val().trim();
         var userMasterName = $("#userMasterName").val().trim();
         var Mobile = $("#txtMobile").val().trim();
